# impulse-wars

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark.c  clean_pufferl.py  cy_impulse_wars.pyx  demo.c  env.h  env.pyx  game.c  game.h  helpers.h  impulse_wars.py  impulse_wars.pyx  layout.txt  main.c  main.py  map.h  policy.py  prototype_arena.txt  pyproject.toml  render.h  settings.h  snipers.txt  sweep.py  training.txt  types.h
cmake/: fix-cython-bool.cmake
include/: cc_common.h  cc_deque.h  cc_slist.h  hashmap.h
src/: benchmark.c  demo.c  env.h  game.h  helpers.h  map.h  render.h  settings.h  types.h
src/include/: cc_array.h  cc_common.h  cc_deque.h  cc_slist.h  dlmalloc.h
